# Kaissa

./: .gitignore  Kaissa.cabal  Kaissa.sublime-project  README.md
source/: Main.hs
source/Data/: WeightedGraph.hs
source/Parser/: GraphLoader.hs  RawTransformer.hs
