name:                Kaissa
version:             0.1.0.0
synopsis:            RnD project      
homepage:            https://github.com/NCrashed/Kaissa
license:             GPL-3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          NCrashed@gmail.com
copyright:           2013 Anton Gushcha                      
build-type:          Simple
cabal-version:       >=1.8

executable Kaissa
  main-is:             Main.hs
  hs-source-dirs:      source      
  build-depends:         base ==4.6.*
                       , containers
                       , uulib
                       , peggy