name:                Kaissa
version:             0.1.0.0
synopsis:            RnD project      
homepage:            https://github.com/NCrashed/Kaissa
license:             GPL-3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          NCrashed@gmail.com
copyright:           2013 Anton Gushcha                      
build-type:          Simple
cabal-version:       >=1.8

executable Kaissa
  main-is:             Main.hs
  hs-source-dirs:      source      
  build-depends:         
                       base ==4.6.*,
                       parsec >=3.1.3 && <3.2,
                       containers >=0.5.0 && <0.6,
                       uulib >=0.9.15 && <0.10,
                       text >=0.11.3 && <0.12,
                       parsec-extra >=0.1.0 && <0.2
